docker-registry.helm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-ingress
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - registry.s8njee.com
      secretName: s8njee-tls
  rules:
    - host: registry.s8njee.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: docker-registry
                port:
                  number: 5000
